--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Inicio | Venta Isabel</title>
   <link rel="icon" type="image/png" href="imagenes/perfil.png" />
   <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen" />
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
@@ -73,38 +73,25 @@
   </div>
 
 
+    <div class="container center map-responsive">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1524.2974897859442!2d-5.839600747164304!3d40.17357059512757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd3e49c372158b2f%3A0x1670330e7784514a!2sVenta%20Isabel!5e0!3m2!1ses!2ses!4v1600120071070!5m2!1ses!2ses" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>    </div>
 
-
-
-
-
-
-
-
-  <div id="banner" class="parallax-container">
-    <div class="section no-pad-bot">
-
-    </div>
-    <div class="parallax"><img src="imagenes/fondo01.jpg" alt="Imagen del bar"></div>
-  </div>
 
 
 
     <!--PRESENTACION-->
-    <div class="container">
-      <div class="section">
- 
-            <div class="container">
-          <div class="row center">
-          <h2 class="header col s12"></h2>
-          <p class="header col s12">Capacidad<br> Acceso para discapacitados<br> Sirve alcohol<br> Bar completo<br> Acepta tarjetas de crédito<br> Servicio de mesa<br> Para llevar<br> Reservas</p>
-          </div>
-          <br>  
-        </div>     
-     
-      </div>
-    </div>
- 
+<div class="container">
+	<div class="section">
+			<div class="row center">				
+				<p class="header col s12">Productos típicos de Extremadura<br>Vinos<br>Quesos y tortas<br>Embutidos</p>
+				<p class="header col s12">Comidas y cenas<br>Especialistas en carnes <br>Hamburguesas artesanales</p>
+				<p class="header col s12">Comida para llevar<br>Reservas</p>
+				<h2 class="header col s12">Contacta con nosotros<br> 643335063<br></h2>
+			
+			</div>		
+	</div>
+</div>
+									 
 
 
 
@@ -117,7 +104,7 @@
       <div class="row">
 
         <div class="col l6 s12 m6">
-          <p>Av Jose María Pizarro, 28, Navaconcejo(10613), España</p>
+          <p>Av Jose María Pizarro, 28<br> Navaconcejo, 10613, España. <br>Tel. 643335063</p>
         </div>
 
         <div class="col l6 s12 m6">
