--- a/carta.html
+++ b/carta.html
@@ -45,7 +45,7 @@
 	<div class="card animate__animated animate__zoomIn">
 
       <div class="card-image">
-        <img class="" src="imagenes/carta01.jpg" alt="Carta del bar venta isabel"> 
+        <img class="" src="imagenes/VentaIsabelCarta2022_1.jpg" alt="Carta del bar venta isabel"> 
       </div>
 
     </div>
@@ -57,7 +57,7 @@
   <div class="col s12">
 	<div class="card animate__animated animate__zoomIn">
       <div class="card-image">
-        <img class="" src="imagenes/carta02.jpg" alt="Carta del bar venta isabel">
+        <img class="" src="imagenes/VentaIsabelCarta2022_2.jpg" alt="Carta del bar venta isabel">
       </div>
 
     </div>
